BugFix comparison compared external comments